# FaceTweaking

./: .gitignore  README.md  README_BACKUP_8212.md  README_REMOTE_8212.md
backup/add-glasses/: CMakeLists.txt
features/add-glasses/: main.cpp
lib/features/: BaseFeature.cpp  BaseFeature.h
lib/features/EyeColor/: EyeColor.cpp  EyeColor.h
src/: ideas.txt
src/add-beard/: face01.tif  main.cpp
src/add-glasses/: CMakeLists.txt  main.cpp
src/eye-color/FaceMorph/: faceMorph.cpp
src/eye-detection/: CMakeLists.txt  main.cpp
